refactor: modify and add class attribute

--- a/internal/web/templates/partials/footer.html
+++ b/internal/web/templates/partials/footer.html
@@ -1,7 +1,11 @@
 {{ define "footer" }}
-<footer>
-    <div>
-        Made with ❤️ by <a href="https://github.com/Kafsh-e-Mardane-Varzeshi-Hypo-Test-Team">Kafsh e Mardane Varzeshi Hypo Test Team</a>
+<footer class="site-footer">
+    <div class="footer-container">
+        <div class="footer-content">
+            <p>Made with ❤️ by <a href="https://github.com/Kafsh-e-Mardane-Varzeshi-Hypo-Test-Team" target="_blank" rel="noopener noreferrer">Kafsh e Mardane Varzeshi Hypo Test Team</a></p>
+            
+            <p class="copyright">&copy; 2025 KMV Online Judge. All rights reserved.</p>
+        </div>
     </div>
 </footer>
 {{ end }}
