--- a/internal/web/templates/layouts/base.html
+++ b/internal/web/templates/layouts/base.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="An online judge for competitive programming and problem-solving.">
         <meta name="keywords" content="online judge, programming, competitive coding, problem-solving">
-
-        <title>{{ block "title" . }}Welcome Page{{ end }}</title>
+        
+        <title>{{ block "title" . }}Kafsh e Mardane Varzeshi Online Judge{{ end }}</title>
+        
+        <link rel="stylesheet" href="/static/css/main.css">
     </head>
     <body>
         {{ template "header" . }}
         
-        <main>
+        <main class="container">
             {{ block "content" . }}
                 <h1>Welcome to Kafsh e Mardane Varzeshi Online Judge!</h1>
             {{ end }}
         </main>
         
-
         {{ template "footer" . }}
     </body>
 </html>
