--- a/internal/web/templates/pages/submissions.html
+++ b/internal/web/templates/pages/submissions.html
@@ -1,28 +1,52 @@
-{{ define "title" }}Submissions{{ end }}
+{{ define "title" }}Submissions - KMV Online Judge{{ end }}
 
 {{ define "content" }}
-<table>
-    <thead>
-        <tr>
-            <th>Submission ID</th>
-            <th>When</th>
-            <th>Problem</th>
-            <th>Status</th>
-            <th>Time</th>
-            <th>Memory</th>
-        </tr>
-    </thead>
-    <tbody>
-        {{ range . }}
-            <tr>
-                <td>{{ .ID }}</td>
-                <td>{{ .When }}</td>
-                <td><a href="/problem/{{.Problem.ID}}">{{.Problem.Name}}</a></td>
-                <td>{{ .Status }}</td>
-                <td>{{ .Time }}</td>
-                <td>{{ .Memory }}</td>
-            </tr>
+<div class="submissions-container">
+    <div class="submissions-header">
+        <h1>Submissions</h1>
+    </div>
+
+    <div class="table-container">
+        <table class="submissions-table">
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>When</th>
+                    <th>Problem</th>
+                    <th>Status</th>
+                    <th>Time</th>
+                    <th>Memory</th>
+                </tr>
+            </thead>
+            <tbody>
+                {{ range .Submissions }}
+                <tr class="submission-row">
+                    <td>{{ .ID }}</td>
+                    <td>{{ .When }}</td>
+                    <td><a href="/problem/{{.Problem.ID}}" class="problem-link">{{.Problem.Name}}</a></td>
+                    <td><span class="status-badge status-{{ .Status | status }}">{{ .Status }}</span></td>
+                    <td>{{ .Time }}ms</td>
+                    <td>{{ .Memory }}MB</td>
+                </tr>
+                {{ else }}
+                <tr>
+                    <td colspan="7" class="no-submissions">No submissions found</td>
+                </tr>
+                {{ end }}
+            </tbody>
+        </table>
+    </div>
+
+    <div class="pagination">
+        {{ if gt .CurrentPage 1 }}
+            <a href="/submissions?page={{ sub .CurrentPage 1 }}" class="pagination-link">Previous</a>
         {{ end }}
-    </tbody>
-</table>
+
+        <span class="pagination-current">{{.CurrentPage}}</span>
+
+        {{ if lt .CurrentPage .TotalPages }}
+            <a href="/submissions?page={{ add .CurrentPage 1 }}" class="pagination-link">Next</a>
+        {{ end }}
+    </div>
+</div>
 {{ end }}
