fix: minor bugs and typos

--- a/internal/web/templates/layouts/base.html
+++ b/internal/web/templates/layouts/base.html
@@ -6,9 +6,9 @@
         <meta name="description" content="An online judge for competitive programming and problem-solving.">
         <meta name="keywords" content="online judge, programming, competitive coding, problem-solving">
         
-        <title>{{ block "title" . }}Kafsh e Mardane Varzeshi Online Judge{{ end }}</title>
+        <title>{{ block "title" . }}KeMV Online Judge{{ end }}</title>
         
-        <link rel="stylesheet" href="/static/css/main.css">
+        <link rel="stylesheet" href="/static/css/main.css?">
     </head>
     <body>
         {{ template "header" . }}
