fix: minor bugs in templates and typos

--- a/internal/web/templates/pages/login.html
+++ b/internal/web/templates/pages/login.html
@@ -1,4 +1,4 @@
-{{ define "title" }}Login - KMV Online Judge{{ end }}
+{{ define "title" }}Login - KeMV Online Judge{{ end }}
 
 {{ define "content" }}
 <div class="auth-container">
