--- a/internal/web/templates/pages/signup.html
+++ b/internal/web/templates/pages/signup.html
@@ -1,4 +1,4 @@
-{{ define "title" }}Sign Up - KMV Online Judge{{ end }}
+{{ define "title" }}Sign Up - KeMV Online Judge{{ end }}
 
 {{ define "content" }}
 <div class="auth-container">
