--- a/internal/web/templates/pages/profile.html
+++ b/internal/web/templates/pages/profile.html
@@ -1,10 +1,10 @@
-{{ define "title" }}{{ .Profile.Username }} - KMV Online Judge{{ end }}
+{{ define "title" }}{{ .Profile.Username }} - KeMV Online Judge{{ end }}
 
 {{ define "content" }}
 <div class="profile-container">
     <div class="profile-header">
         <div class="profile-avatar">
-            <div class="avatar-placeholder"></div>
+            <div class="avatar-placeholder">{{ initial .Profile.Username }}</div>
         </div>
         <div class="profile-info">
             <h1>{{ .Profile.Username }}</h1>
@@ -14,7 +14,7 @@
                 </span>
                 {{ if .User.IsAdmin }}
                     <form action="/{{ if .Profile.IsAdmin }}demote{{ else }}promote{{ end }}-user" method="POST" class="role-form">
-                        <input type="hidden" name="user_id" value="{{ .Profile.ID }}">
+                        <input type="hidden" name="user_id" value="{{ .Profile.Username }}">
                         <button type="submit" class="btn btn-small {{ if .Profile.IsAdmin }}btn-warning{{ else }}btn-success{{ end }}">
                             {{ if .Profile.IsAdmin }}Remove Admin{{ else }}Make Admin{{ end }}
                         </button>
