fix: minor bugs and typos

--- a/internal/web/templates/pages/problemset.html
+++ b/internal/web/templates/pages/problemset.html
@@ -1,4 +1,4 @@
-{{ define "title" }}Problem Set - KMV Online Judge{{ end }}
+{{ define "title" }}Problem Set - KeMV Online Judge{{ end }}
 
 {{ define "content" }}
 <div class="problemset-container">
@@ -20,7 +20,7 @@
                     <tr>
                         <td>{{.ID}}</td>
                         <td>
-                            <a href="/problem/{{.ID}}" class="problem-link">{{.Name}}</a>
+                            <a href="/problem/{{.ID}}" class="problem-link">{{.Title}}</a>
                         </td>
                         <td>
                             <a href="/submit/{{.ID}}" class="btn btn-small">Submit</a>
