--- a/internal/web/templates/pages/profile.html
+++ b/internal/web/templates/pages/profile.html
@@ -58,7 +58,7 @@
                     <tr class="submission-row">
                         <td>{{.ID}}</td>
                         <td>{{ .When }}</td>
-                        <td><a href="/problem/{{.Problem.ID}}" class="problem-link">{{.Problem.Name}}</a></td>
+                        <td><a href="/problem/{{.Problem.ID}}" class="problem-link">{{.Problem.Title}}</a></td>
                         <td><span class="status-badge status-{{ .Status | status }}">{{ .Status }}</span></td>
                         <td>{{ .Time }}ms</td>
                         <td>{{ .Memory }}MB</td>
