--- a/internal/web/templates/layouts/base.html
+++ b/internal/web/templates/layouts/base.html
@@ -8,7 +8,7 @@
         
         <title>{{ block "title" . }}KeMV Online Judge{{ end }}</title>
         
-        <link rel="stylesheet" href="/static/css/main.css?">
+        <link rel="stylesheet" href="/static/css/style.css">
     </head>
     <body>
         {{ template "header" . }}
