feat: add submit styling

--- a/internal/web/templates/pages/submit.html
+++ b/internal/web/templates/pages/submit.html
@@ -1,8 +1,8 @@
 {{ define "title" }}Submit Solution - KeMV Online Judge{{ end }}
 
 {{ define "content" }}
-<div class="submit-container">
-    <div class="submit-header">
+<div>
+    <div class="content-header">
         <h1>Submit Solution</h1>
     </div>
 
