--- a/internal/web/templates/pages/login.html
+++ b/internal/web/templates/pages/login.html
@@ -3,8 +3,8 @@
 {{ define "content" }}
 <div class="auth-container">
     <div class="auth-card">
-        <div class="auth-header">
-            <h1 class="auth-title">Log In</h1>
+        <div class="content-header">
+            <h1>Log In</h1>
         </div>
 
         <form action="/login" method="post" class="auth-form">
