--- a/internal/web/templates/pages/problem.html
+++ b/internal/web/templates/pages/problem.html
@@ -1,7 +1,7 @@
 {{ define "title" }}{{ .Problem.ID }}. {{ .Problem.Title }} - KeMV Online Judge{{ end }}
 
 {{ define "content" }}
-<div class="problem-container">
+<div>
     <div class="problem-header">
         <h1>{{ .Problem.ID }}. {{ .Problem.Title }}</h1>
         <div class="problem-meta">
@@ -18,7 +18,6 @@
 
     <div class="problem-content">
         <section class="problem-statement">
-            <h2>Problem Statement</h2>
             <div class="markdown-content">
                 {{ .Problem.Statement | markdown}}
             </div>
