fix: favicon 404 error

--- a/internal/web/templates/layouts/base.html
+++ b/internal/web/templates/layouts/base.html
@@ -8,6 +8,7 @@
         
         <title>{{ block "title" . }}KeMV Online Judge{{ end }}</title>
         
+        <link rel="icon" href="/static/favicon.ico" type="image/x-icon" />
         <link rel="stylesheet" href="/static/css/style.css">
     </head>
     <body>
