--- a/internal/web/templates/pages/problemset.html
+++ b/internal/web/templates/pages/problemset.html
@@ -32,15 +32,23 @@
     </div>
 
     <div class="pagination">
+        <a {{ if gt .CurrentPage 1 }} href="/problemset?page={{ sub .CurrentPage 1 }}" {{ end }} class="pagination-link">Previous</a>
         {{ if gt .CurrentPage 1 }}
-            <a href="/problemset?page={{ sub .CurrentPage 1 }}" class="pagination-link">Previous</a>
+            <a href="/problemset?page=1" class="pagination-link">1</a>
+            {{ if gt .CurrentPage 2 }}
+                <a class="pagination-link">...</a>
+            {{ end }}
         {{ end }}
 
         <span class="pagination-current">{{.CurrentPage}}</span>
 
         {{ if lt .CurrentPage .TotalPages }}
-            <a href="/problemset?page={{ add .CurrentPage 1 }}" class="pagination-link">Next</a>
+            {{ if lt (add .CurrentPage 1) .TotalPages }}
+                <a class="pagination-link">...</a>
+            {{ end }}
+            <a href="/problemset?page={{.TotalPages}}" class="pagination-link">{{.TotalPages}}</a>
         {{ end }}
+        <a {{ if lt .CurrentPage .TotalPages }} href="/problemset?page={{ add .CurrentPage 1 }}" {{ end }} class="pagination-link">Next</a>
     </div>
 </div>
 {{ end }}
